Fix ghost layer content appearing after creating a new (second) layer

When there is only one layer in the group, the group has no
projection at all. So when adding a layer, which changes the number of
layers from 1 to 2, the stack should be updated to populate the group's
projection.

Fixes T2073
BUG:358422